[gd_scene load_steps=7 format=3 uid="uid://pd01dp4mpd0g"]

[ext_resource type="Script" uid="uid://5kvm0ojlugqx" path="res://scripts/room_1.gd" id="1_d0u7m"]
[ext_resource type="Script" uid="uid://bervqc0fos33f" path="res://scripts/rays.gd" id="4_3wwl0"]
[ext_resource type="Script" uid="uid://fmo17p8nnbg1" path="res://scripts/arrow.gd" id="4_d0u7m"]
[ext_resource type="Script" uid="uid://dy7l7xohs6gpf" path="res://scripts/instructions.gd" id="5_0akh5"]
[ext_resource type="Texture2D" uid="uid://dwg3tqitqd41m" path="res://icon.svg" id="6_d0u7m"]
[ext_resource type="Texture2D" uid="uid://d06y05otxnoxq" path="res://images/light.png" id="7_wy464"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_d0u7m")

[node name="Arrow" type="Button" parent="."]
offset_left = 10.0
offset_top = 316.0
offset_right = 100.0
offset_bottom = 377.0
text = "⬅️"
script = ExtResource("4_d0u7m")
destination_scene = 2

[node name="ShowPuzzleButton" type="Button" parent="."]
offset_left = 725.0
offset_top = 177.0
offset_right = 876.0
offset_bottom = 293.0

[node name="Rays" type="Node2D" parent="."]
script = ExtResource("4_3wwl0")

[node name="Line2D" type="Line2D" parent="Rays"]

[node name="Laser" type="RayCast2D" parent="Rays"]
collide_with_areas = true

[node name="Instructions" type="Node2D" parent="."]
visible = false
script = ExtResource("5_0akh5")

[node name="BgInstructions" type="Sprite2D" parent="Instructions"]
position = Vector2(568.5, 307.25)
scale = Vector2(7.46094, 4.70703)
texture = ExtResource("6_d0u7m")

[node name="CloseButton" type="Button" parent="Instructions"]
offset_left = 929.0
offset_top = 15.0
offset_right = 1039.0
offset_bottom = 81.0
text = "X"

[node name="Label" type="Label" parent="Instructions"]
offset_left = 170.0
offset_top = 36.0
offset_right = 660.0
offset_bottom = 449.0
text = "
Deze raadsel is over kracht in de ruimte tussen verschillende hemellichamen, kunne jullie bepalen over welke hemellichaam het gaat? 

Formule  

Instructies: Fgrav = 3,52 * 10^22 N 

G = constante(zelf opzoeken) 

Maarde = (zelf opzoeken) 

r = 1,496 * 10^11 

m = niet bekende "
autowrap_mode = 1

[node name="Hints" type="Node2D" parent="."]
visible = false
script = ExtResource("5_0akh5")

[node name="bg" type="Sprite2D" parent="Hints"]
position = Vector2(568.5, 307.25)
scale = Vector2(7.46094, 4.70703)
texture = ExtResource("6_d0u7m")

[node name="CloseButton" type="Button" parent="Hints"]
offset_left = 929.0
offset_top = 15.0
offset_right = 1039.0
offset_bottom = 81.0
text = "X"

[node name="Label" type="Label" parent="Hints"]
offset_left = 170.0
offset_top = 36.0
offset_right = 660.0
offset_bottom = 449.0
text = "
Deze raadsel is over kracht in de ruimte tussen verschillende hemellichamen, kunne jullie bepalen over welke hemellichaam het gaat? 

Formule  

Instructies: Fgrav = 3,52 * 10^22 N 

G = constante(zelf opzoeken) 

Maarde = (zelf opzoeken) 

r = 1,496 * 10^11 

m = niet bekende "
autowrap_mode = 1

[node name="Hint" type="Button" parent="."]
offset_left = 1058.0
offset_top = 12.0
offset_right = 1137.0
offset_bottom = 71.0
text = "?"

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(984, 209)
scale = Vector2(1.125, 1.01172)
color = Color(0.554878, 0.452474, 0, 1)
energy = 10.32
texture = ExtResource("7_wy464")

[connection signal="pressed" from="Arrow" to="." method="_on_arrow_pressed"]
[connection signal="pressed" from="Arrow" to="Arrow" method="_on_pressed"]
[connection signal="pressed" from="ShowPuzzleButton" to="Instructions" method="_on_show_puzzle_button_pressed"]
[connection signal="pressed" from="Instructions/CloseButton" to="Instructions" method="_on_close_button_pressed"]
[connection signal="pressed" from="Hints/CloseButton" to="Hints" method="_on_close_button_pressed"]
[connection signal="pressed" from="Hint" to="Hints" method="_on_hint_pressed"]
